# tipitaka.lk

./: .gitignore  .gitmodules  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
dev/: build-tree.mjs  populate-audio.mjs  populate-text-db.mjs
dev/align/: App.vue  index.html  main.js  style.css
dev/align/eng_thani/: dn-1-2.json
server/: build-all.sh  go.mod  go.sum  open_tipitaka_lk.service  server.go  tipitaka_lk_new.service
server-data/: metadata.json
server/rust-test/: Cargo.toml
server/rust-test/.cargo/: config.toml
server/rust-test/src/: main.rs
src/: App.vue  main.js  router.js  style.css  utils.js
src/components/: CollectionName.vue  DropdownButton.vue  TextRow.vue  TextTab.vue  TreeNode.vue  VAlert.vue  VButton.vue  VSkeleton.vue
src/stores/: savedStore.js  textStore.js  treeStore.js
src/views/: BookView.vue  BookpageView.vue  CollectionListView.vue  HelpView.vue  HomeView.vue  TextView.vue
