[package]
name = "test_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
rusqlite = { version = "0.32.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

# for mac
# cargo build --release --target x86_64-apple-darwin and aarch64-apple-darwin for arm

# build for windows from mac
# brew install mingw-w64 sqlite
# cargo build --release --target x86_64-pc-windows-gnu

# needed the following for building for linux from mac
# brew install x86_64-linux-gnu-gcc
# sudo ln -s /opt/homebrew/bin/x86_64-unknown-linux-gnu-gcc /usr/local/bin/x86_64-linux-gnu-gcc
# export RUSTFLAGS="-C linker=x86_64-linux-gnu-gcc"  # this can be defined in the .cargo/config.toml file
# cargo build --release --target x86_64-unknown-linux-gnu